2013-10-13  Eric Botcazou  <ebotcazou@adacore.com>

	* gnat.dg/uninit_array.ad[sn]: New test.
	* gnat.dg/uninit_array_pkg.ads: New helper.

2013-10-13  Richard Biener  <rguenther@suse.de>

	* gcc.c-torture/execute/pr58662.c: New test.

2013-10-12  Oleg Endo  <olegendo@gcc.gnu.org>

	PR target/51244
	* gcc.dg/torture/p51244-21.c: New.
	* gcc.target/sh/pr51244-20.c: New.
	* gcc.target/sh/pr51244-20-sh2a.c: New.

2013-10-12  Arnaud Charlet  <charlet@adacore.com>

	* gnat.dg/specs/linker_section.ads: Update test.

2013-10-12  H.J. Lu  <hongjiu.lu@intel.com>

	PR target/58690
	* gcc.target/i386/pr58690.c: New test

2013-10-12  Alexander Monakov  <amonakov@ispras.ru>

	* gcc.target/i386/builtin-ucmp.c: New test.

2013-10-11  Brooks Moses  <bmoses@google.com>

	* g++.dg/ext/altivec-7.C: Check for standard vector-type name mangling.

2013-10-11  Jeff Law  <law@redhat.com>

	* gcc.c-torture/execute/pr58640.c: New test.

2013-10-11  Paolo Carlini  <paolo.carlini@oracle.com>

	PR c++/58633
	* g++.dg/cpp0x/decltype57.C: New.

2013-10-11  Paolo Carlini  <paolo.carlini@oracle.com>

	PR c++/31671
	* g++.dg/template/nontype26.C: New.

2013-10-11  Thomas Schwinge  <thomas@codesourcery.com>

	* c-c++-common/cpp/openmp-define-1.c: New file.
	* c-c++-common/cpp/openmp-define-2.c: Likewise.
	* c-c++-common/cpp/openmp-define-3.c: Likewise.
	* gfortran.dg/openmp-define-1.f90: Likewise.
	* gfortran.dg/openmp-define-2.f90: Likewise.
	* gfortran.dg/openmp-define-3.f90: Likewise.

	* g++.dg/gomp/gomp.exp: Recurse into subdirectories when looking
	for test source files.
	* gcc.dg/gomp/gomp.exp: Likewise.
	* gcc.dg/gomp/appendix-a/a.35.1.c: Expect error.
	* gcc.dg/gomp/appendix-a/a.35.3.c: Likewise.
	* gcc.dg/gomp/appendix-a/a.35.4.c: Likewise.
	* gcc.dg/gomp/appendix-a/a.35.5.c: Likewise.
	* gcc.dg/gomp/appendix-a/a.35.6.c: Likewise.

2013-10-11  Jakub Jelinek  <jakub@redhat.com>

	* c-c++-common/gomp/atomic-15.c: Adjust for C diagnostics.
	Remove error test that is now valid in OpenMP 4.0.