@@ -1,3 +1,8 @@
+2013-10-14  Richard Biener  <rguenther@suse.de>
+
+	PR tree-optimization/58640
+	* gcc.c-torture/execute/pr58640-2.c: New testcase.
+
 2013-10-13  Eric Botcazou  <ebotcazou@adacore.com>
 
 	* gnat.dg/uninit_array.ad[sn]: New test.
